Fix this css decl. The extra space is helpful on top.html, at least.
git-svn-id: http://svn.openkomodo.com/repos/komododoc/trunk@2223 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/en-US/css/top.css
+++ b/en-US/css/top.css
@@ -1,6 +1,6 @@
 *  {
 	margin: 0;
-	padding-top: 4;
+	padding-top: 4px;
 	padding-right: 0;
 	padding-bottom: 0;
 	padding-left: 0;
